--- a/adventure-yaarana/src/app/components/gallery/gallery.html
+++ b/adventure-yaarana/src/app/components/gallery/gallery.html
@@ -11,7 +11,7 @@
   <section class="gallery-content">
     <div class="container">
       <div class="gallery-grid">
-        <div class="gallery-item">
+        <div class="gallery-card">
           <div class="gallery-image goa"></div>
           <div class="gallery-overlay">
             <h3>Goa Beach Paradise</h3>
@@ -19,7 +19,7 @@
           </div>
         </div>
         
-        <div class="gallery-item">
+        <div class="gallery-card">
           <div class="gallery-image himalaya"></div>
           <div class="gallery-overlay">
             <h3>Himalayan Trek</h3>
@@ -27,7 +27,7 @@
           </div>
         </div>
         
-        <div class="gallery-item">
+        <div class="gallery-card">
           <div class="gallery-image rajasthan"></div>
           <div class="gallery-overlay">
             <h3>Rajasthan Royalty</h3>
@@ -35,7 +35,7 @@
           </div>
         </div>
         
-        <div class="gallery-item">
+        <div class="gallery-card">
           <div class="gallery-image kerala"></div>
           <div class="gallery-overlay">
             <h3>Kerala Backwaters</h3>
@@ -43,7 +43,7 @@
           </div>
         </div>
         
-        <div class="gallery-item">
+        <div class="gallery-card">
           <div class="gallery-image manali"></div>
           <div class="gallery-overlay">
             <h3>Manali Adventure</h3>
@@ -51,7 +51,7 @@
           </div>
         </div>
         
-        <div class="gallery-item">
+        <div class="gallery-card">
           <div class="gallery-image andaman"></div>
           <div class="gallery-overlay">
             <h3>Andaman Islands</h3>
