--- a/adventure-yaarana/src/app/components/blog/blog.html
+++ b/adventure-yaarana/src/app/components/blog/blog.html
@@ -15,7 +15,7 @@
           <div class="post-image"></div>
           <div class="post-content">
             <div class="post-meta">
-              <span class="date">March 15, 2024</span>
+              <span class="date">March 15, 2024</span><br>
               <span class="category">Travel Tips</span>
             </div>
             <h3>10 Essential Items for Your Next Adventure</h3>
@@ -28,7 +28,7 @@
           <div class="post-image goa"></div>
           <div class="post-content">
             <div class="post-meta">
-              <span class="date">March 10, 2024</span>
+              <span class="date">March 10, 2024</span><br>
               <span class="category">Destination Guide</span>
             </div>
             <h3>Hidden Gems of Goa Beyond the Beaches</h3>
@@ -41,7 +41,7 @@
           <div class="post-image himalaya"></div>
           <div class="post-content">
             <div class="post-meta">
-              <span class="date">March 5, 2024</span>
+              <span class="date">March 5, 2024</span><br>
               <span class="category">Adventure</span>
             </div>
             <h3>Trekking in the Himalayas: A Beginner's Guide</h3>
@@ -54,7 +54,7 @@
           <div class="post-image rajasthan"></div>
           <div class="post-content">
             <div class="post-meta">
-              <span class="date">February 28, 2024</span>
+              <span class="date">February 28, 2024</span><br>
               <span class="category">Culture</span>
             </div>
             <h3>Experiencing Royal Rajasthan: Palaces and Culture</h3>
@@ -67,7 +67,7 @@
           <div class="post-image kerala"></div>
           <div class="post-content">
             <div class="post-meta">
-              <span class="date">February 20, 2024</span>
+              <span class="date">February 20, 2024</span><br>
               <span class="category">Relaxation</span>
             </div>
             <h3>Kerala Backwaters: A Journey of Peace and Tranquility</h3>
@@ -80,7 +80,7 @@
           <div class="post-image manali"></div>
           <div class="post-content">
             <div class="post-meta">
-              <span class="date">February 15, 2024</span>
+              <span class="date">February 15, 2024</span><br>
               <span class="category">Adventure</span>
             </div>
             <h3>Winter Adventures in Manali: Snow and Excitement</h3>
