--- a/adventure-yaarana/src/styles.css
+++ b/adventure-yaarana/src/styles.css
@@ -1,9 +1,9 @@
 /* Import Poppins Font */
-@import '@fontsource/poppins';
+/* @import '@fontsource/poppins';
 @import '@fontsource/poppins/400.css';
 @import '@fontsource/poppins/500.css';
 @import '@fontsource/poppins/600.css';
-@import '@fontsource/poppins/700.css';
+@import '@fontsource/poppins/700.css'; */
 
 /* Global Styles for Adventure Yaarana */
 * {
