--- a/adventure-yaarana/src/app/components/blog/blog.html
+++ b/adventure-yaarana/src/app/components/blog/blog.html
@@ -12,7 +12,11 @@
     <div class="container">
       <div class="blog-grid">
         <article class="blog-post">
-          <div class="post-image"></div>
+          <div class="post-image">
+             <img
+              src='https://images.unsplash.com/photo-1509650926597-25eead3b6ca9?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'
+              alt="Group Travel">
+          </div>
           <div class="post-content">
             <div class="post-meta">
               <span class="date">March 15, 2024</span><br>
@@ -25,7 +29,11 @@
         </article>
 
         <article class="blog-post">
-          <div class="post-image goa"></div>
+          <div class="post-image goa">
+            <img
+              src='https://images.unsplash.com/photo-1724408841657-2f844be8d0b6?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'
+              alt="Group Travel">
+          </div>
           <div class="post-content">
             <div class="post-meta">
               <span class="date">March 10, 2024</span><br>
@@ -38,7 +46,11 @@
         </article>
 
         <article class="blog-post">
-          <div class="post-image himalaya"></div>
+          <div class="post-image himalaya">
+            <img
+              src='https://images.unsplash.com/photo-1597394649337-eb7b2cb52dde?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'
+              alt="Group Travel">
+          </div>
           <div class="post-content">
             <div class="post-meta">
               <span class="date">March 5, 2024</span><br>
@@ -51,7 +63,11 @@
         </article>
 
         <article class="blog-post">
-          <div class="post-image rajasthan"></div>
+          <div class="post-image rajasthan">
+             <img
+              src='https://media.istockphoto.com/id/825020012/photo/indian-palace.webp?a=1&b=1&s=612x612&w=0&k=20&c=Pd45tGIIlRvITZYVbPudq1h1pQrFQeV50p60VE8_LlM='
+              alt="Group Travel">
+          </div>
           <div class="post-content">
             <div class="post-meta">
               <span class="date">February 28, 2024</span><br>
@@ -64,20 +80,28 @@
         </article>
 
         <article class="blog-post">
-          <div class="post-image kerala"></div>
+          <div class="post-image kerala">
+            <img
+              src='https://images.unsplash.com/photo-1591414638143-12980893e46f?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'
+              alt="Group Travel">
+          </div>
           <div class="post-content">
             <div class="post-meta">
               <span class="date">February 20, 2024</span><br>
               <span class="category">Relaxation</span>
             </div>
-            <h3>Kerala Backwaters: A Journey of Peace and Tranquility</h3>
+            <h3>Kerala Culture: A Journey of Peace and Tranquility</h3>
             <p>Escape the hustle and bustle of city life with a serene journey through Kerala's backwaters. Experience nature, local life, and authentic cuisine...</p>
             <a href="#" class="read-more">Read More →</a>
           </div>
         </article>
 
         <article class="blog-post">
-          <div class="post-image manali"></div>
+          <div class="post-image manali">
+             <img
+              src='https://images.unsplash.com/photo-1607144113358-9d8dd893a647?q=80&w=763&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'
+              alt="Group Travel">
+          </div>
           <div class="post-content">
             <div class="post-meta">
               <span class="date">February 15, 2024</span><br>
