--- a/adventure-yaarana/src/app/components/contact/contact.scss
+++ b/adventure-yaarana/src/app/components/contact/contact.scss
@@ -111,11 +111,12 @@
 
 // Contact Info Section
 .contact-info-section {
-  h2 {
-    font-size: 2rem;
+   h2 {
+    font-size: 2.5rem;
     color: var(--primary-color);
     margin-bottom: 2rem;
     font-weight: 600;
+    text-align: center;
   }
 }
 
