--- a/adventure-yaarana/src/app/components/footer/footer.html
+++ b/adventure-yaarana/src/app/components/footer/footer.html
@@ -7,33 +7,37 @@
           <p>{{ companyInfo.description }}</p>
         </div>
       </div>
-      
+
       <div class="footer-section">
         <h3>Quick Links</h3>
         <ul>
           <li *ngFor="let link of quickLinks"><a [routerLink]="link.route">{{ link.label }}</a></li>
         </ul>
       </div>
-      
+
       <div class="footer-section">
         <h3>Services</h3>
         <ul>
           <li class="foot-service" *ngFor="let service of services">{{ service.name }}</li>
         </ul>
       </div>
-      
+
       <div class="footer-section">
         <h3>Contact Info</h3>
         <div class="contact-info">
-          <p *ngFor="let contact of contactInfo"><i class="icon">{{ contact.icon }}</i> {{ contact.text.replace('@', '&#64;') }}</p>
+          <p *ngFor="let contact of contactInfo">
+            {{ contact.icon }}
+            <i class="icon" >{{ contact.text.replace('@', '&#64;') }} </i>
+          </p>
         </div>
-        
+
         <div class="social-links">
-          <a *ngFor="let social of socialLinks" [href]="social.url" [attr.aria-label]="social.ariaLabel" target="_blank" rel="noopener">{{ social.icon }}</a>
+          <a *ngFor="let social of socialLinks" [href]="social.url" [attr.aria-label]="social.ariaLabel" target="_blank"
+            rel="noopener">{{ social.icon }}</a>
         </div>
       </div>
     </div>
-    
+
     <div class="footer-bottom">
       <p>{{ legalInfo.copyrightText }} | {{ legalInfo.privacyPolicy }} | {{ legalInfo.termsOfService }}</p>
     </div>
