--- a/adventure-yaarana/src/app/components/footer/footer.scss
+++ b/adventure-yaarana/src/app/components/footer/footer.scss
@@ -81,7 +81,8 @@
     color: #b3c6d9;
 
     .icon {
-      margin-right: 10px;
+      // margin-right: 10px;
+      margin-left: 5px;
       font-size: 16px;
     }
   }
