--- a/adventure-yaarana/src/app/components/services/services.html
+++ b/adventure-yaarana/src/app/components/services/services.html
@@ -139,13 +139,13 @@
           <h4>Activities</h4>
           <p>Exciting activities and sightseeing</p>
         </div>
-        <div class="included-item">
+        <!-- <div class="included-item">
           <div class="included-border">
           <div class="included-icon">🛡️</div>
           </div>
           <h4>Insurance</h4>
           <p>Travel insurance and safety coverage</p>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
