--- a/adventure-yaarana/src/app/components/blog/blog.scss
+++ b/adventure-yaarana/src/app/components/blog/blog.scss
@@ -37,6 +37,14 @@
   margin-bottom: 4rem;
 }
 
+.post-image img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 0 3rem 0 3rem ;
+  margin-bottom: 1rem;
+}
+
 .blog-post {
   // gap: 1rem;
   //   margin-bottom: 1.5rem;
@@ -47,9 +55,12 @@
   box-shadow: 0 4px 6px var(--shadow);
   border: 1px solid var(--border-color);
   transition: all 0.3s ease;
+  cursor: pointer;
 }
 
 .blog-post:hover {
+    cursor: pointer;
+//   transform: translateX(25px);
   transform: translateY(-5px);
   box-shadow: 0 8px 25px var(--shadow);
 }
