--- a/adventure-yaarana/src/app/components/home/home.css
+++ b/adventure-yaarana/src/app/components/home/home.css
@@ -17,7 +17,7 @@
   margin: 0 auto;
   padding: 0 20px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 2fr 1fr;
   gap: 60px;
   align-items: center;
 }
@@ -288,6 +288,7 @@
   height: 250px;
   object-fit: cover;
   transition: transform 0.3s ease;
+  border-radius: 0 3rem 0 3rem;
 }
 
 .destination-card:hover .destination-image img {
@@ -439,6 +440,7 @@
   width: 100%;
   height: 250px;
   object-fit: cover;
+  border-radius: 0 3rem 0 3rem;
 }
 
 .trip-badge {
